# solar-system

./: .gitignore  CMakeLists.txt  README.md
shaders/: planet.frag  planet.vert  sky.frag  sky.vert  skybox.frag  skybox.vert  sun.frag  sun.vert
src/: main.cpp
